Enhance error handling and validation in authentication process; add API error classes and update Postman testing documentation